--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings 配置站点
 title: 's3cunDa'
-description: '写东西的地方'
+description: 'something about ctf and something about nothing'
 keywords: 'ctf&coding'
 url: 'https://s3cunDa.github.io' # your host
 
@@ -16,7 +16,7 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 author: true
 name: 's3cunDa'
 NickName: 'secunda'
-webtitle: 'nothing to do'
+webtitle: 's3cunDa's blog'
 bio: 'nothing'
 about: true
 aboutyou: 'binary freshman'
