--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# Site settings 配置站点
-title: 'Secunda'
+# Site settings 
+title: ''
 description: 'something about ctf and something about nothing'
 keywords: 'ctf&coding'
 url: 'https://s3cunDa.github.io' # your host
