--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 
-title: ''
+title: 'secunda'
 description: 'something about ctf and something about nothing'
 keywords: 'ctf&coding'
 url: 'https://s3cunDa.github.io' # your host
