--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-# Site settings 
-title: 'secunda'
-description: 'something about ctf and something about nothing'
-keywords: 'ctf&coding'
-url: 'https://s3cunDa.github.io' # your host
+# Site settings 配置站点
+title: 'your awesome title'
+description: 'your web description'
+keywords: 'your web keywords, another keywords'
+url: 'https://abc.github.io' # your host
 
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
@@ -14,20 +14,20 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 's3cunDa'
-NickName: 'secunda'
-webtitle: 's3cunDa's blog'
-bio: 'nothing'
+name: 'your awesome name'
+NickName: 'your awesome nickname'
+webtitle: 'your awesome webtitle'
+bio: 'your awesome bio'
 about: true
-aboutyou: 'binary freshman'
+aboutyou: 'your introduction'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
 SNS: true
 SNS-icon: #['facebook', 'weibo', 'QQ', 'github', 'Dribbble', 'twitter', 'instagram', 'weixin']
-  mail: '895664831@qq.com'
-  weixin: 'zwx895664831' # your wechat image file path
-  QQ: '895664831' # your QQ image file path
+  mail: 'mailto:abc@gmail.com'
+  weixin: '' # your wechat image file path
+  QQ: '' # your QQ image file path
   weibo: ''
   instagram: ''
   twitter: ''
