--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings 配置站点
-title: 'your awesome title'
-description: 'your web description'
-keywords: 'your web keywords, another keywords'
-url: 'https://abc.github.io' # your host
+title: 'Secunda's blog
+description: 'some writeups and learning experiences'
+keywords: 'coding, ctf'
+url: 'https://s3cunDa.github.io' # your host
 
 # nav 中文字符空格：&emsp;
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
@@ -14,18 +14,18 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'your awesome name'
-NickName: 'your awesome nickname'
-webtitle: 'your awesome webtitle'
-bio: 'your awesome bio'
+name: 'secunda'
+NickName: 'adnuces'
+webtitle: 'Secunda's blog'
+bio: 'binary freshman'
 about: true
-aboutyou: 'your introduction'
+aboutyou: 'pwn weakchicken'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
 SNS: true
 SNS-icon: #['facebook', 'weibo', 'QQ', 'github', 'Dribbble', 'twitter', 'instagram', 'weixin']
-  mail: 'mailto:abc@gmail.com'
+  mail: '895664831@qq.com'
   weixin: '' # your wechat image file path
   QQ: '' # your QQ image file path
   weibo: ''
@@ -40,7 +40,7 @@ SNS-icon: #['facebook', 'weibo', 'QQ', 'github', 'Dribbble', 'twitter', 'instagr
   twitch: ''
 
 # 分页
-paginate: 2
+paginate: 10
 paginatepath: ['page:num']
 
 # since
