--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'Secunda's blog
+title: 'Secunda'
 description: 'some writeups and learning experiences'
 keywords: 'coding, ctf'
 url: 'https://s3cunDa.github.io' # your host
