--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings 配置站点
-title: 'Secunda'
-description: 'some writeups and learning experiences'
-keywords: 'coding, ctf'
+title: 'your awesome title'
+description: 'your web description'
+keywords: 'your web keywords, another keywords'
 url: 'https://s3cunDa.github.io' # your host
 
 # nav 中文字符空格：&emsp;
@@ -16,10 +16,10 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 author: true
 name: 'secunda'
 NickName: 'adnuces'
-webtitle: 'Secunda's blog'
-bio: 'binary freshman'
+webtitle: 'Secunda'
+bio: 'your awesome bio'
 about: true
-aboutyou: 'pwn weakchicken'
+aboutyou: 'your introduction'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
