--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ pygmentsTheme: 'default'
 
 # 友情链接
 friends:
-  jekyll: 'https://www.jekyll.com.cn/'
+  xuanxuan: 'xuanxuanblingbling.github.io'
 
 # 评论 最佳体验 在disqus、livere和Gitment之间三选一
 # disqus 评论
