--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ author: true
 name: 'secunda'
 NickName: 'adnuces'
 webtitle: 'Secunda'
-bio: 'your awesome bio'
+bio: 'weakchicken'
 about: true
-aboutyou: 'your introduction'
+aboutyou: 'male, pwn, student'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
