--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,9 @@ pygmentsTheme: 'default'
 friends:
   xuanxuan: 'https://xuanxuanblingbling.github.io'
   天舒: 'https://blog.csdn.net/weixin_40850881'
+  Hit0n: 'https://hit0on.github.io'
+  梅老板: 'https://b3t4m3ee.github.io/'
+  risker: 'http://mmmmmmlei.cn/'
 
 # 评论 最佳体验 在disqus、livere和Gitment之间三选一
 # disqus 评论
