--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings 配置站点
-title: 'your awesome title'
-description: 'your web description'
-keywords: 'your web keywords, another keywords'
+title: 's3cunda's blog'
+description: 's3cunda's blog'
+keywords: 'ctf, blockchain, smart contract'
 url: 'https://s3cunDa.github.io' # your host
 
 # nav 中文字符空格：&emsp;
@@ -19,7 +19,7 @@ NickName: 'adnuces'
 webtitle: 'Secunda'
 bio: 'weakchicken'
 about: true
-aboutyou: 'male, pwn, student'
+aboutyou: 'Nese, pwn, blockchain'
 portraits: '/assets/profile.jpeg' # your portraits image file path
 
 # SNS
@@ -84,10 +84,10 @@ social-share-items: ['qq', 'wechat', 'weibo', 'twitter', 'facebook']
 
 # 百度统计 在baidu-url里填写自己相关的url代码
 baidu: true
-baidu-url: ''
+baidu-url: 'https://s3cunDa.github.io'
 # 谷歌分析 在google-ID里填写自己在谷歌分析获得的追踪ID
-google: false
-google-ID: ''
+google: true
+google-ID: 'https://s3cunDa.github.io'
 
 # 博客头信息备选颜色（该部分在站点中不充当站点变量，将其写在post的头信息中用来充当页面变量）
 color: rgb(154,133,255) rgb(255,90,90) rgb(255,210,32) rgb(98,170,255)
