--- a/_config.yml
+++ b/_config.yml
@@ -87,4 +87,4 @@ google-ID: 'https://s3cunDa.github.io'
 
 # 博客头信息备选颜色（该部分在站点中不充当站点变量，将其写在post的头信息中用来充当页面变量）
 color: rgb(154,133,255) rgb(255,90,90) rgb(255,210,32) rgb(98,170,255)
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-hacker
